# OTUS_python

./: README.md  requirements.txt
.github/workflows/: django.yml  pylint.yml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  dockerignore  main.py  pyproject.toml
homework_04/: __init__.py  crud.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml
homework_05/: app.py  pyproject.toml
homework_05/templates/: base.html  index.html
homework_05/templates/products/: base.html  detail.html  index.html
homework_05/views/: items.py  products.py
homework_06/: Dockerfile  app.env  app.py  config.py  crud.py  docker-compose.yaml  pg.env  pyproject.toml
homework_06/models/: __init__.py  users_posts.py
homework_06/templates/: about.html  base.html  index.html
homework_06/templates/posts/: add.html  confirm-delete.html  detail.html  index.html
homework_06/templates/users/: add.html  confirm-delete.html  detail.html  index.html
homework_06/views/: posts.py
homework_06/views/forms/: post.py  user.py  users.py
homework_07/RobinBobin/: README.md  pyproject.toml
homework_07/RobinBobin/RobinBobin/: settings.py  urls.py  wsgi.py
homework_07/RobinBobin/mainapp/: admin.py  views.py
homework_07/RobinBobin/mainapp/templates/mainapp/: index.html
homework_07/RobinBobin/mainapp/templates/profiles/: profiles.html
homework_08/RobinBobin/: README.md
homework_08/RobinBobin/RobinBobin/: settings.py  urls.py
homework_08/RobinBobin/mainapp/: admin.py  models.py  urls.py  views.py
homework_08/RobinBobin/templates/: root.html
homework_09/RobinBobin/: README.md
homework_10/RobinBobin/: manage.py
wishlist/wishlist/: asgi.py  settings.py  urls.py  wsgi.py
(+31 files in other folders)
