[tool.poetry]
name = "homework-04"
version = "0.1.0"
description = ""
authors = ["n.pistsov <n.pistsov@ritm.media>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {version = "<2", extras = ["asyncio"]}
aiohttp = "^3.8.5"
pg8000 = "^1.30.1"
alembic = "^1.12.0"
black = "^23.9.1"
asyncpg = "^0.28.0"
charset-normalizer = "<3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
